--- a/Foundit/app/views/postings/show.html.erb
+++ b/Foundit/app/views/postings/show.html.erb
@@ -1,3 +1,11 @@
+<div style="width: 1100px;margin: 0 auto;">
+<br />
+<%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
+
+
+<div style="text-align: center;">
+<br />
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -64,3 +72,4 @@
 
 <%= link_to 'Edit', edit_posting_path(@posting) %> |
 <%= link_to 'Back', postings_path %>
+</div>
