--- a/Foundit/app/views/postings/_form.html.erb
+++ b/Foundit/app/views/postings/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :type => :text %>
   </div>
   <!--
   <div class="field">
