--- a/Foundit/app/views/postings/edit.html.erb
+++ b/Foundit/app/views/postings/edit.html.erb
@@ -1,6 +1,15 @@
+<div style="width: 1100px;margin: 0 auto;">
+<br />
+<%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
+
+
+<div style="text-align: center;">
+<br />
+
 <h1>Editing Posting</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @posting %> |
 <%= link_to 'Back', postings_path %>
+</div>
