--- a/Foundit/app/views/postings/new.html.erb
+++ b/Foundit/app/views/postings/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Posting</h1>
+<div style="width: 1100px;margin: 0 auto;">
+<br />
+<%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
+
+
+<div style="text-align: center;">
+<br />
 
 <%= render 'form' %>
 
 <%= link_to 'Back', postings_path %>
+</div>
