--- a/Foundit/app/assets/stylesheets/postings.css.scss
+++ b/Foundit/app/assets/stylesheets/postings.css.scss
@@ -65,6 +65,15 @@ body {
   width: auto;
 }
 
+.appAd {
+  height: 35%;
+  display: block;
+  position:relative;
+  margin: -2% -13%;
+  width: auto;
+  float:right;
+}
+
 .homeText {
   width: 300px;
   height: 50px;
