--- a/Foundit/app/views/postings/index.html.erb
+++ b/Foundit/app/views/postings/index.html.erb
@@ -1,5 +1,6 @@
 <div style="width: 1100px;margin: 0 auto;">
 <br />
+<%= image_tag("get_the_app.png", :class => "appAd") %>
 <%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
 
 <div style="margin: 0 auto;width: auto;padding-left: 36%;">
