- location based postings supported - latitude and longitude columns added to postings - UML diagram

--- a/Foundit/app/views/postings/show.html.erb
+++ b/Foundit/app/views/postings/show.html.erb
@@ -58,6 +58,14 @@
 =end %>
 
 <p>
+  <b>Latitude:</b>
+  <%= @posting.latitude %>
+</p>
+<p>
+  <b>Longitude:</b>
+  <%= @posting.longitude %>
+</p>
+<p>
   <b>Created At:</b>
   <%= @posting.created_at %>
 </p>
