--- a/Foundit/app/views/postings/_form.html.erb
+++ b/Foundit/app/views/postings/_form.html.erb
@@ -38,6 +38,14 @@
   </div>
   -->
   <div class="field">
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </div>
+  <div class="field">
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
+  </div>
+  <div class="field">
 	<%= f.file_field :photo %>
   </div>  
   <div class="actions">
