--- a/Foundit/app/views/postings/index.html.erb
+++ b/Foundit/app/views/postings/index.html.erb
@@ -20,6 +20,8 @@ Type = 2 = Found
     <th>Description</th>
     <th>Image</th>
     <th>Image Thumbnail</th>
+    <th>Latitude</th>
+    <th>Longitude</th>
     <th>Created At</th>
     <th>Last Modified</th>
     <th></th>
@@ -35,6 +37,8 @@ Type = 2 = Found
     <td><%= posting.description %></td>
     <td><%= image_tag(posting.photo.url(:large)) %></td>
     <td><%= image_tag(posting.photo.url(:thumb)) %></td>
+    <td><%= posting.latitude %></td>
+    <td><%= posting.longitude %></td>
     <td><%= posting.created_at %></td>
     <td><%= posting.updated_at %></td>
     <td><%= link_to 'Show', posting %></td>
