--- a/Foundit/app/views/layouts/application.html.erb
+++ b/Foundit/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
 			<li><a href="about.html">About</a></li>
 		</ul>
 </header>
-<div class = "imageBack">
+<div id = "imageBack">
+<!-- <div class = "imageBackLayer"> -->
+<body>
 <%= yield %>
-</div>
 </body>
+<!-- </div> -->
+</div>
 </html>
