--- a/Foundit/app/views/postings/index.html.erb
+++ b/Foundit/app/views/postings/index.html.erb
@@ -2,7 +2,7 @@
 <br />
 <%= image_tag("get_the_app.png", :class => "appAd") %>
 <%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
-
+<br /><br />
 <div style="margin: 0 auto;width: auto;padding-left: 36%;">
 	<%= link_to "New Posting", new_posting_path, :class => "homeText" %>
 <div style="margin-left: 90px;">
@@ -17,11 +17,9 @@ Type = 2 = Found
   	<th>ID</th>
   	<th>Type</th>
     <th>Name</th>
-    <th>Description</th>
     <th>Image</th>
     <th>Image Thumbnail</th>
     <th>Created At</th>
-    <th>Last Modified</th>
     <th></th>
     <th></th>
     <th></th>
@@ -32,11 +30,9 @@ Type = 2 = Found
   	<td><%= posting.id %></td>
   	<td><%= posting.posting_type %></td>
     <td><%= posting.name %></td>
-    <td><%= posting.description %></td>
     <td><%= image_tag(posting.photo.url(:large)) %></td>
     <td><%= image_tag(posting.photo.url(:thumb)) %></td>
-    <td><%= posting.created_at %></td>
-    <td><%= posting.updated_at %></td>
+    <td><%= posting.created_at_formatted %></td>
     <td><%= link_to 'Show', posting %></td>
     <td><%= link_to 'Edit', edit_posting_path(posting) %></td>
     <td><%= link_to 'Destroy', posting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
