- More Web UI fixes

--- a/Foundit/app/assets/stylesheets/postings.css.scss
+++ b/Foundit/app/assets/stylesheets/postings.css.scss
@@ -34,7 +34,7 @@ background-size: 100% 75%;
 }
 
 #imageBack:before {
-  content:url('');
+  content:url('1x1t.gif');
   background-image: url('Clouds_only.png');
   background-repeat:no-repeat;
   background-position:bottom;
