- added app links to views - bug fixes in Web UI

--- a/Foundit/app/views/postings/about.html.erb
+++ b/Foundit/app/views/postings/about.html.erb
@@ -6,11 +6,15 @@
 <br />
 <br /><br />
 
-<h1>Awesome people who want to help you<br /><br /> find your lost stuff</h1>
+<h1>Awesome people who want<br /><br /> to help you find your lost stuff</h1>
 <br /><br />
 <h2>CPS630 - Group 1 - 2013</h2>
 <h2>Shaun Maharaj</h2>
 <h2>Matthew Martire</h2>
 <h2>Parnit Pooni</h2>
+<br /><br />
+<%=link_to(image_tag("download_iphone.png"),"https://dl.dropbox.com/u/4678775/Foundit.ipa") %>
+<%=link_to(image_tag("download_android.png"),"https://dl.dropbox.com/u/4678775/FoundItMobile.apk") %>
+<br /><br />
 <%= link_to 'Back', postings_path %>
 </div>
