--- a/Foundit/app/assets/stylesheets/postings.css.scss
+++ b/Foundit/app/assets/stylesheets/postings.css.scss
@@ -107,6 +107,12 @@ body {
   float:right;
 }
 
+@-moz-document url-prefix(){
+	.appAd {
+		width: 18%;
+	}	
+}
+
 .homeText {
   width: 300px;
   height: 50px;
