--- a/Foundit/app/views/postings/index.html.erb
+++ b/Foundit/app/views/postings/index.html.erb
@@ -1,6 +1,6 @@
 <div style="width: 1100px;margin: 0 auto;">
 <br />
-<%= image_tag("get_the_app.png", :class => "appAd") %>
+<%=link_to(image_tag("get_the_app.png", :class => "appAd"),"about.html") %>
 <%= image_tag("FounditLogo@2x.png", :class => "mainLogo") %>
 <br /><br />
 <div style="margin: 0 auto;width: auto;padding-left: 36%;">
