--- a/Foundit/app/views/layouts/application.html.erb
+++ b/Foundit/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 			<li><%= link_to "Show All", postings_path %></li>
 			<li><%= link_to "Sort by Lost", {:controller => "postings", :action => "show_lost"} %></li>
 			<li><%= link_to "Sort by Found", {:controller => "postings", :action => "show_found"} %></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="/about.html">About</a></li>
 		</ul>
 </header>
 <div id = "imageBack">
