--- a/Foundit/app/views/postings/about.html.erb
+++ b/Foundit/app/views/postings/about.html.erb
@@ -6,12 +6,12 @@
 <br />
 <br /><br />
 
-<h1>Awesome people who want<br /><br /> to help you find your lost stuff</h1>
+<h1 class="headerAbout">Awesome people who<br /><br /> want to help you find your<br /><br /> lost stuff</h1>
 <br /><br />
-<h2>CPS630 - Group 1 - 2013</h2>
-<h2>Shaun Maharaj</h2>
-<h2>Matthew Martire</h2>
-<h2>Parnit Pooni</h2>
+<h2 class="headerAbout">CPS630 - Group 1 - 2013</h2>
+<h2 class="headerAbout">Shaun Maharaj</h2>
+<h2 class="headerAbout">Matthew Martire</h2>
+<h2 class="headerAbout">Parnit Pooni</h2>
 <br /><br />
 <%=link_to(image_tag("download_iphone.png"),"https://dl.dropbox.com/u/4678775/Foundit.ipa") %>
 <%=link_to(image_tag("download_android.png"),"https://dl.dropbox.com/u/4678775/FoundItMobile.apk") %>
